--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=demo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/auth-service
-spring.datasource.name=postgres
+spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:migration
